fix topNavigatopn name alignment

--- a/src/components/topNavigation/styles.scss
+++ b/src/components/topNavigation/styles.scss
@@ -37,9 +37,8 @@
     border-radius: 20px
   }
   .user-avatar-container-name{
-    padding-left: 8%;
-    padding-top: 10%;
-    width: 100px;
+   margin-top: 15%;
+   margin-left: 10px
   }
   @media screen and (max-width: 760px) {
     .logo{
