--- a/src/sections/landingPage/topSection/styles.scss
+++ b/src/sections/landingPage/topSection/styles.scss
@@ -10,7 +10,7 @@ $base-white: #ffffff;
         padding-top: 8.5%;
         h1{
             font-weight: bold;
-            line-height: 45px;
+            line-height: 42px;
             font-size: 40px;
             color: #061088;
         }
